--- a/camerademo/src/main/res/layout/activity_capture.xml
+++ b/camerademo/src/main/res/layout/activity_capture.xml
@@ -33,10 +33,12 @@
             android:text="拍照(返回原始图) + 裁切" />
 
         <ImageView
+            android:layout_marginBottom="100dp"
             android:id="@+id/ivResult"
-            android:layout_width="wrap_content"
+            android:scaleType="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="40dp" />
     </LinearLayout>
 
 
