--- a/camerademo/src/main/res/layout/activity_capture.xml
+++ b/camerademo/src/main/res/layout/activity_capture.xml
@@ -23,22 +23,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="拍照(返回原始图)" />
+            android:text="拍照" />
 
         <Button
             android:id="@+id/btnCaptureAndClip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="拍照(返回原始图) + 裁切" />
+            android:text="拍照 + 裁切" />
 
-        <ImageView
-            android:layout_marginBottom="100dp"
-            android:id="@+id/ivResult"
-            android:scaleType="center"
+        <Button
+            android:id="@+id/btnAlbumAndClip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp" />
+            android:layout_marginTop="10dp"
+            android:text="相册 + 裁切" />
+        <Button
+            android:id="@+id/btnCaptureVideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="录视频 + 拍照" />
+
+        <ImageView
+            android:id="@+id/ivResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:layout_marginTop="40dp"
+            android:scaleType="center" />
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="10dp"
+            android:visibility="gone" />
     </LinearLayout>
 
 
