--- a/camerademo/src/main/res/layout/activity_main.xml
+++ b/camerademo/src/main/res/layout/activity_main.xml
@@ -19,14 +19,14 @@
             android:id="@+id/btCapture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="简单拍照" />
+            android:text="系统相机拍照" />
 
         <Button
-            android:id="@+id/btCaptureAndClip"
+            android:id="@+id/btCamera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="简单拍照 + 裁剪" />
+            android:text="Camera" />
     </GridLayout>
 
 
