--- a/camerademo/src/main/res/layout/activity_camera.xml
+++ b/camerademo/src/main/res/layout/activity_camera.xml
@@ -9,37 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <RelativeLayout
-        android:id="@+id/rlTop"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#000"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/ivFlash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/ic_flash_close" />
-
-        <ImageView
-            android:id="@+id/ivSetting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_setting" />
-    </RelativeLayout>
 
 
     <RelativeLayout
         android:id="@+id/rlBottom"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:background="#000"
         app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/ivSetting"
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_setting" />
 
         <ImageButton
             android:id="@+id/btnTakePic"
