--- a/camerademo/src/main/res/layout/activity_camera.xml
+++ b/camerademo/src/main/res/layout/activity_camera.xml
@@ -4,11 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.cs.camerademo.view.FaceRectView
+        android:id="@+id/faceView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
     <RelativeLayout
@@ -22,8 +27,8 @@
         <ImageView
             android:id="@+id/ivSetting"
             android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:src="@drawable/ic_setting" />
 
