--- a/camerademo/src/main/res/layout/activity_camera.xml
+++ b/camerademo/src/main/res/layout/activity_camera.xml
@@ -41,6 +41,23 @@
             android:visibility="visible" />
 
         <ImageView
+            android:id="@+id/btnStart"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_start"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/btnStop"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_stop"
+            android:visibility="gone" />
+
+
+        <ImageView
             android:id="@+id/ivExchange"
             android:layout_width="40dp"
             android:layout_height="40dp"
