--- a/Architecture/src/main/res/layout/activity_main.xml
+++ b/Architecture/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
         android:layout_height="wrap_content"
         android:text="LiveData 和 ViewModel" />
 
+    <Button
+        android:id="@+id/btnCoroutines"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Coroutines" />
+
 
     <TextView
         android:layout_width="wrap_content"
