--- a/Architecture/src/main/res/layout/activity_main.xml
+++ b/Architecture/src/main/res/layout/activity_main.xml
@@ -33,6 +33,13 @@
         android:layout_height="wrap_content"
         android:text="Coroutines" />
 
+    <Button
+        android:id="@+id/btnNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="navigation" />
+
+
 
     <TextView
         android:layout_width="wrap_content"
